// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS|Controls/Input As textarea 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c2 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2::placeholder {
  color: #96a0b3;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2:focus {
  outline-style: none;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::placeholder {
  color: #b1bdcc;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c3 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    disabled={false}
    size="large"
  >
    <textarea
      className="c2"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      rows={4}
      size="large"
    />
    <div
      className="c3"
    />
    
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input Combined inputs group 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 .c7 {
  opacity: 0;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
}

.c2:hover .c7 {
  opacity: 1;
  -webkit-transition-delay: .15s;
  transition-delay: .15s;
}

.c5 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 0 3px 3px 0;
}

.c5::-webkit-input-placeholder {
  color: #96a0b3;
}

.c5::-moz-placeholder {
  color: #96a0b3;
}

.c5:-ms-input-placeholder {
  color: #96a0b3;
}

.c5::placeholder {
  color: #96a0b3;
}

.c5::-webkit-input-placeholder {
  color: #96a0b3;
}

.c5::-moz-placeholder {
  color: #96a0b3;
}

.c5:-ms-input-placeholder {
  color: #96a0b3;
}

.c5:focus {
  outline-style: none;
}

.c5:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c5:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::placeholder {
  color: #b1bdcc;
}

.c5:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c5:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-right: 1px solid #b1bdcc;
  border-radius: 3px 0 0 3px;
}

.c3::-webkit-input-placeholder {
  color: #96a0b3;
}

.c3::-moz-placeholder {
  color: #96a0b3;
}

.c3:-ms-input-placeholder {
  color: #96a0b3;
}

.c3::placeholder {
  color: #96a0b3;
}

.c3::-webkit-input-placeholder {
  color: #96a0b3;
}

.c3::-moz-placeholder {
  color: #96a0b3;
}

.c3:-ms-input-placeholder {
  color: #96a0b3;
}

.c3:focus {
  outline-style: none;
}

.c3:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c3:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::placeholder {
  color: #b1bdcc;
}

.c3:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c3:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-right: 1px solid #b1bdcc;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4::placeholder {
  color: #96a0b3;
}

.c4::-webkit-input-placeholder {
  color: #96a0b3;
}

.c4::-moz-placeholder {
  color: #96a0b3;
}

.c4:-ms-input-placeholder {
  color: #96a0b3;
}

.c4:focus {
  outline-style: none;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::placeholder {
  color: #b1bdcc;
}

.c4:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c4:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c4:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c6 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

@media screen and (max-width:1199px) {
  .responsive .c2 .c7,
  .responsive-booking .c2 .c7 {
    opacity: 1;
  }
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    size="large"
  >
    <div
      className="combined-inputs-group c2"
    >
      <input
        className="c3"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="DD"
        size="large"
        type="number"
      />
      <input
        className="c4"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="MM"
        size="large"
        type="number"
      />
      <input
        className="c5"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="YYYY"
        size="large"
        type="number"
      />
    </div>
    <div
      className="c6"
    />
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input Separate inputs group 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 .c9 {
  opacity: 0;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
}

.c1:hover .c9 {
  opacity: 1;
  -webkit-transition-delay: .15s;
  transition-delay: .15s;
}

.c3 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px 0 0 3px;
}

.c3::-webkit-input-placeholder {
  color: #96a0b3;
}

.c3::-moz-placeholder {
  color: #96a0b3;
}

.c3:-ms-input-placeholder {
  color: #96a0b3;
}

.c3::placeholder {
  color: #96a0b3;
}

.c3::-webkit-input-placeholder {
  color: #96a0b3;
}

.c3::-moz-placeholder {
  color: #96a0b3;
}

.c3:-ms-input-placeholder {
  color: #96a0b3;
}

.c3:focus {
  outline-style: none;
}

.c3:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c3:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::placeholder {
  color: #b1bdcc;
}

.c3:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c3:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c3:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c6 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
}

.c6::-webkit-input-placeholder {
  color: #96a0b3;
}

.c6::-moz-placeholder {
  color: #96a0b3;
}

.c6:-ms-input-placeholder {
  color: #96a0b3;
}

.c6::placeholder {
  color: #96a0b3;
}

.c6::-webkit-input-placeholder {
  color: #96a0b3;
}

.c6::-moz-placeholder {
  color: #96a0b3;
}

.c6:-ms-input-placeholder {
  color: #96a0b3;
}

.c6:focus {
  outline-style: none;
}

.c6:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c6:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c6:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c6:disabled::placeholder {
  color: #b1bdcc;
}

.c6:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c6:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c6:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c8 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 0 3px 3px 0;
}

.c8::-webkit-input-placeholder {
  color: #96a0b3;
}

.c8::-moz-placeholder {
  color: #96a0b3;
}

.c8:-ms-input-placeholder {
  color: #96a0b3;
}

.c8::placeholder {
  color: #96a0b3;
}

.c8::-webkit-input-placeholder {
  color: #96a0b3;
}

.c8::-moz-placeholder {
  color: #96a0b3;
}

.c8:-ms-input-placeholder {
  color: #96a0b3;
}

.c8:focus {
  outline-style: none;
}

.c8:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c8:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c8:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c8:disabled::placeholder {
  color: #b1bdcc;
}

.c8:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c8:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c8:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px 0 0 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c2:hover {
  border-color: #38afff;
  z-index: 1;
}

.c2 .combined-inputs-group {
  height: 100%;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border: 1px solid #b1bdcc;
  border-style: solid;
  margin-left: -1px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c5:hover {
  border-color: #38afff;
  z-index: 1;
}

.c5 .combined-inputs-group {
  height: 100%;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 0 3px 3px 0;
  border: 1px solid #b1bdcc;
  border-style: solid;
  margin-left: -1px;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c7:hover {
  border-color: #38afff;
  z-index: 1;
}

.c7 .combined-inputs-group {
  height: 100%;
}

.c4 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

@media screen and (max-width:1199px) {
  .responsive .c1 .c9,
  .responsive-booking .c1 .c9 {
    opacity: 1;
  }
}

<div
  className="responsive c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="large"
    >
      <input
        className="c3"
        name="input"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Только прямые рейсы"
        size="large"
        type="text"
      />
      <div
        className="c4"
      />
    </div>
    <div
      className="c5"
      size="large"
    >
      <input
        className="c6"
        name="input"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Только прямые рейсы"
        size="large"
        type="text"
      />
      <div
        className="c4"
      />
    </div>
    <div
      className="c7"
      size="large"
    >
      <input
        className="c8"
        name="input"
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Только прямые рейсы"
        size="large"
        type="text"
      />
      <div
        className="c4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input With RF + validation 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c2 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2::placeholder {
  color: #96a0b3;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2:focus {
  outline-style: none;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::placeholder {
  color: #b1bdcc;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c3 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    size="large"
  >
    <input
      className="c2"
      form="COMPONENTS|Controls/Input"
      name="input"
      onBlur={[Function]}
      onChange={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
      value=""
    />
    <div
      className="c3"
    />
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input With icon group 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c5 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 0;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2::placeholder {
  color: #96a0b3;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2:focus {
  outline-style: none;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::placeholder {
  color: #b1bdcc;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c6 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c3 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 3px;
  padding-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    disabled={false}
    size="large"
  >
    <input
      className="c2"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
    />
    <div
      className="c3"
      onMouseDown={[Function]}
      size="large"
    >
      <span
        className="c4"
      >
        <svg
          className="c5"
          fill="miscDark"
          name="man"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_man"
          />
        </svg>
      </span>
      <span
        className="c4"
      >
        <svg
          className="c5"
          fill="miscDark"
          name="angle"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_angle"
          />
        </svg>
      </span>
    </div>
    <div
      className="c6"
    />
    
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input With icons 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c4 {
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: fill,-webkit-transform;
  -webkit-transition-property: fill,transform;
  transition-property: fill,transform;
  height: 18px;
  width: 18px;
  fill: #96a0b3;
  opacity: 1;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c5 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 0;
  padding-right: 0;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c5::-webkit-input-placeholder {
  color: #96a0b3;
}

.c5::-moz-placeholder {
  color: #96a0b3;
}

.c5:-ms-input-placeholder {
  color: #96a0b3;
}

.c5::placeholder {
  color: #96a0b3;
}

.c5::-webkit-input-placeholder {
  color: #96a0b3;
}

.c5::-moz-placeholder {
  color: #96a0b3;
}

.c5:-ms-input-placeholder {
  color: #96a0b3;
}

.c5:focus {
  outline-style: none;
}

.c5:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c5:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::placeholder {
  color: #b1bdcc;
}

.c5:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c5:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c5:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c7 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

.c2 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 10px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 100%;
  padding-left: 8px;
  padding-right: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: top;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    disabled={false}
    size="large"
  >
    <div
      className="c2"
      onMouseDown={[Function]}
      size="large"
    >
      <span
        className="c3"
      >
        <svg
          className="c4"
          fill="miscDark"
          name="man"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_man"
          />
        </svg>
      </span>
    </div>
    <input
      className="c5"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
    />
    <div
      className="c6"
      onMouseDown={[Function]}
      size="large"
    >
      <span
        className="c3"
      >
        <svg
          className="c4"
          fill="miscDark"
          name="angle"
          rotate=""
          size="normal"
        >
          <use
            xlinkHref="#kb_angle"
          />
        </svg>
      </span>
    </div>
    <div
      className="c7"
    />
    
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Controls/Input default 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c2 {
  position: relative;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: 100%;
  height: 100%;
  line-height: normal;
  border: none;
  min-height: 42px;
  font-family: inherit;
  -webkit-letter-spacing: -0.1px;
  -moz-letter-spacing: -0.1px;
  -ms-letter-spacing: -0.1px;
  letter-spacing: -0.1px;
  padding-left: 14px;
  padding-right: 14px;
  font-size: 18px;
  color: #333333;
  background-color: transparent;
  border-radius: 3px;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2::placeholder {
  color: #96a0b3;
}

.c2::-webkit-input-placeholder {
  color: #96a0b3;
}

.c2::-moz-placeholder {
  color: #96a0b3;
}

.c2:-ms-input-placeholder {
  color: #96a0b3;
}

.c2:focus {
  outline-style: none;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::placeholder {
  color: #b1bdcc;
}

.c2:disabled::-webkit-input-placeholder {
  color: #b1bdcc;
}

.c2:disabled::-moz-placeholder {
  color: #b1bdcc;
}

.c2:disabled:-ms-input-placeholder {
  color: #b1bdcc;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffff;
  border-radius: 3px;
  border: 1px solid #b1bdcc;
  border-style: solid;
  -webkit-transition: 0.15s ease-out;
  transition: 0.15s ease-out;
  -webkit-transition-property: border-color;
  transition-property: border-color;
}

.c1:hover {
  border-color: #38afff;
  z-index: 1;
}

.c1 .combined-inputs-group {
  height: 100%;
}

.c3 {
  position: absolute;
  top: -1px;
  left: -1px;
  display: none;
  height: calc(100% + 2px);
  width: 2px;
  background-color: #e64926;
}

<div
  className="responsive c0"
>
  <div
    className="c1"
    disabled={false}
    size="large"
  >
    <input
      className="c2"
      disabled={false}
      name="input"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder="Только прямые рейсы"
      size="large"
    />
    <div
      className="c3"
    />
    
  </div>
</div>
`;
